# klembord

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
klembord/: __init__.py  winclipboard.py  xclipboard.py
package/: WinClipboard.py  XClipboard.py  __init__.py  winclipboard.py
