[tool.poetry]
name = "klembord"
version = "0.3.0"
description = "Full toolkit agnostic cross-platform clipboard access"
readme = "README.md"
keywords = ["clipboard", "cross-platform"]
authors = ["Ozymandias <tomas.rav@gmail.com>"]
license = "MIT"
repository = "https://github.com/OzymandiasTheGreat/klembord"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Environment :: X11 Applications",
	"Environment :: Win32 (MS Windows)",
	"Intended Audience :: Developers",
	"Operating System :: Microsoft :: Windows",
	"Operating System :: POSIX",
	"Operating System :: POSIX :: Linux",
]

[tool.poetry.dependencies]
python = "^3.6"
python-xlib = { version = "^0.26", markers = "sys_platform == 'linux'" }
stopit = { version = "^1.1.2", markers = "sys_platform == 'linux'" }

[tool.poetry.dev-dependencies]
mypy = "^0.930"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
